# lexmath

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  DEBIAN_CONTROL  LICENSE  README.md  gendll.bat  genpkg.sh
include/: lexmath.h
src/: lexmath.c
